<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D7D7"
    android:padding="16dp"
    tools:context="cn.studyjams.s1.sj64.hufei.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                style="@style/ACustomTitle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:text="@string/bigTitle"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/cq_cover" />

            <TextView
                style="@style/ACustomTitle"
                android:text="@string/contentTitle" />

            <Button
                android:id="@+id/id_cq_one"
                style="@style/ACustomButton"
                android:text="@string/title_1" />

            <Button
                android:id="@+id/id_cq_two"
                style="@style/ACustomButton"
                android:text="@string/title_2" />

            <Button
                android:id="@+id/id_cq_three"
                style="@style/ACustomButton"
                android:text="@string/title_3" />

            <Button
                android:id="@+id/id_cq_four"
                style="@style/ACustomButton"
                android:text="@string/title_4" />

            <Button
                android:id="@+id/id_cq_five"
                style="@style/ACustomButton"
                android:text="@string/title_5" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
